[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/cluf.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/main_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/ui/dialogs/bg_construire.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/guide_title.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/font_infos.tres" type="DynamicFont" id=5]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://themes/scrollbar_grabber.tres" type="StyleBox" id=7]
[ext_resource path="res://themes/panel.tres" type="StyleBox" id=8]
[ext_resource path="res://themes/button_background_active.tres" type="StyleBox" id=9]
[ext_resource path="res://themes/scrollbar.tres" type="StyleBox" id=10]
[ext_resource path="res://themes/button_background.tres" type="StyleBox" id=11]
[ext_resource path="res://assets/fonts/main_font.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
resource_name = "Font"
size = 28
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=1]
resource_local_to_scene = true
default_font = SubResource( 2 )
Button/colors/font_color = Color( 1, 0.568627, 0.184314, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = ExtResource( 11 )
Button/styles/focus = ExtResource( 11 )
Button/styles/hover = ExtResource( 9 )
Button/styles/normal = ExtResource( 11 )
Button/styles/pressed = ExtResource( 9 )
Dialogs/constants/button_margin = 32
Dialogs/constants/margin = 8
Label/colors/font_color = Color( 0.992157, 0.568627, 0.180392, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/DialogLine = ExtResource( 2 )
Label/fonts/font = ExtResource( 2 )
Label/styles/normal = null
Panel/styles/panel = ExtResource( 8 )
PopupDialog/styles/panel = ExtResource( 8 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = ExtResource( 7 )
VScrollBar/styles/grabber_highlight = ExtResource( 7 )
VScrollBar/styles/grabber_pressed = ExtResource( 7 )
VScrollBar/styles/scroll = ExtResource( 10 )
VScrollBar/styles/scroll_focus = null
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = ExtResource( 8 )

[node name="CLUF" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 25
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
margin_left = 50.0
margin_top = 25.0
margin_right = 974.0
margin_bottom = 575.0
texture = ExtResource( 3 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Button" type="Button" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -87.0
margin_top = -35.5942
margin_right = 87.0
margin_bottom = 21.4058
theme = SubResource( 1 )
text = "Accepter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 25.0
margin_right = 974.0
margin_bottom = 575.0
mouse_filter = 2

[node name="Label" type="Label" parent="MainContainer"]
margin_right = 924.0
margin_bottom = 58.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
text = "Contrat de Licence de l'Utilisateur Final"
align = 1
valign = 1

[node name="ScrollMargin" type="MarginContainer" parent="MainContainer"]
margin_top = 62.0
margin_right = 924.0
margin_bottom = 550.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 40
custom_constants/margin_left = 20
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/ScrollMargin"]
margin_left = 20.0
margin_top = 40.0
margin_right = 904.0
margin_bottom = 448.0
mouse_filter = 2
size_flags_horizontal = 5

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/ScrollMargin/VBoxContainer"]
margin_right = 884.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
custom_constants/margin_right = 15
custom_constants/margin_left = 15

[node name="ScrollContainer2" type="ScrollContainer" parent="MainContainer/ScrollMargin/VBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 869.0
margin_bottom = 408.0
size_flags_vertical = 3
theme = ExtResource( 6 )
scroll_horizontal_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="MainContainer/ScrollMargin/VBoxContainer/MarginContainer/ScrollContainer2"]
margin_right = 854.0
margin_bottom = 408.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 5 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.266667, 0.113725, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center](vide)[/center]"
text = "(vide)"

[connection signal="pressed" from="Background/Button" to="." method="_on_Button_pressed"]
